cmake_minimum_required(VERSION 3.17)
project(proiectOOP)

set(CMAKE_CXX_STANDARD 14)

add_executable(proiectOOP main.cpp Contract.cpp COntract.h Contract_adulti.cpp Contract_adulti.h Contract_copii.cpp Contract_copii.h RepoFile.cpp RepoFile.h Repository.cpp Repository.h RepositoryException.h Service.cpp Service.h ServiceException.h Ui.cpp Ui.h Util.cpp Util.h Validator.cpp Validator.h)